fix z-index and pointer-events

--- a/example/plugin-install/style/global-style.scss
+++ b/example/plugin-install/style/global-style.scss
@@ -1,6 +1,6 @@
 // Здесь задаются стили по умолчанию
 
-.dlg .dlg-container {
+.dlg .dlg-container .dlg-group {
   pointer-events: none;
   & > div {
     pointer-events: all;
